<resources>

    <string name="app_name">HomeBot</string>
    <string name="warning">You must enable HomeBot as your assist app for it to work</string>
    <string name="error_no_assistant">This device doesn\'t support HomeBot</string>
    <string name="error_brightness">Cannot access system brightness settings</string>

    <string name="pref_header">Choose what will happen when you press and hold the home button</string>
    <string name="pref_title_app">Launch app</string>
    <string name="pref_title_shortcut">Launch shortcut</string>
    <string name="pref_title_web">Open web page</string>
    <string name="pref_title_flashlight">Toggle flashlight</string>
    <string name="pref_title_prev_app">Open previous app</string>
    <string name="pref_title_recents">Open recent apps screen</string>
    <string name="pref_title_lock">Lock phone</string>
    <string name="pref_title_brightness">Toggle brightness</string>
    <string name="pref_title_file">Open a file</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>

    <string name="choose_app">Choose an app</string>
    <string name="choose_activity">Choose an activity</string>
    <string name="choose_shortcut">Choose a shortcut</string>
    <string name="other_activities">Other activities</string>
    <string name="default_activity">Default app activity</string>
    <string name="enter_url">Enter a web URL</string>

    <string name="web_hint">www.duck.com</string>
    <string name="no_items">No available items</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="flashlight_on">Flashlight is active</string>

</resources>
